# rerex

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  COPYING  NEWS  README.md  meson.build  meson_options.txt
.reuse/: dep5
LICENSES/: ISC.txt
include/rerex/: rerex.h
meson/: meson.build
meson/suppressions/: meson.build
meson/warnings/: meson.build
src/: .clang-tidy  rerex.c
test/: .clang-tidy  meson.build  test_match.c  test_syntax.c  test_xsd.c
test/headers/: .clang-tidy  test_headers.c
